fixed spacing

--- a/dev/styles/main.scss
+++ b/dev/styles/main.scss
@@ -616,4 +616,22 @@ h4.gray {
 	background:#e6e6e6;
 	font-family: $headingsfontfamily;
 	text-rendering: optimizelegibility;
+	padding:5px;
+}
+
+div.subscribe {
+	text-align:center;
+	margin:0 auto;
+}
+
+li:first-child { 
+    margin-top:12px;
+}
+
+.first { 
+    margin-top:12px;
+}
+
+li.first {
+	margin-top:0px;
 }
